--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
           />
           <ul class="nav__links">
             <li>
-              <a href="#events" class="nav__link">Recipes</a>
+              <a href="#recipes" class="nav__link">Recipes</a>
             </li>
             <li>
-              <a href="#staff" class="nav__link">Book a table</a>
+              <a href="#reservation" class="nav__link">Book a table</a>
             </li>
             <li>
-              <a href="#membership" class="nav__link">Menu</a>
+              <a href="#menu" class="nav__link">Menu</a>
             </li>
             <li>
               <a href="#about" class="nav__link">Contacts</a>
@@ -76,11 +76,11 @@
           <ul class="recipes__videos">
             <li>
               <iframe
+                class="recipes__iframe"
                 width="560"
                 height="315"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc?si=_FnL25WSnAtnYDVS"
                 title="YouTube video player"
-                frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen
@@ -92,11 +92,11 @@
             </li>
             <li>
               <iframe
+                class="recipes__iframe"
                 width="560"
                 height="315"
                 src="https://www.youtube.com/embed/st571DYYTR8?si=1bVetOBOjnT30OgI"
                 title="YouTube video player"
-                frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen
