some errors are corrected

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       </header>
       <main class="content">
         <section class="recipes">
+          <a name="recipes"></a>
           <h2 class="recipes__title">Recipes</h2>
           <p class="recipes__subtitle">
             Check out some recipes we've collected for your home-brewing
@@ -108,9 +109,15 @@
             </li>
           </ul>
         </section>
-        <section class="reservation"></section>
-        <section class="menue"></section>
-        <section class="about"></section>
+        <section class="reservation">
+          <a name="reservation"></a>
+        </section>
+        <section class="menue">
+          <a name="menu"></a>
+        </section>
+        <section class="about">
+          <a name="about"></a>
+        </section>
       </main>
       <footer class="footer"></footer>
     </div>
