some errors are corrected

--- a/index.html
+++ b/index.html
@@ -66,9 +66,8 @@
           </p>
         </div>
       </header>
-      <main class="content">
+      <main id="recipes" class="content">
         <section class="recipes">
-          <a name="recipes"></a>
           <h2 class="recipes__title">Recipes</h2>
           <p class="recipes__subtitle">
             Check out some recipes we've collected for your home-brewing
@@ -109,15 +108,9 @@
             </li>
           </ul>
         </section>
-        <section class="reservation">
-          <a name="reservation"></a>
-        </section>
-        <section class="menue">
-          <a name="menu"></a>
-        </section>
-        <section class="about">
-          <a name="about"></a>
-        </section>
+        <section id="reservation" class="reservation"></section>
+        <section id="menu" class="menue"></section>
+        <section id="about" class="about"></section>
       </main>
       <footer class="footer"></footer>
     </div>
